BottomBar: fix for text verical align in anchor based button
[Issue] https://github.com/Samsung/TAU/issues/1124
[Problem] Button with "ui-btn" should looks the same as Anchor
 with "ui-btn"
[Solution]
 - added vertical align to text button in bottom bar

--- a/src/css/profile/mobile/common/bottombar.less
+++ b/src/css/profile/mobile/common/bottombar.less
@@ -27,6 +27,11 @@
             &.ui-btn-icon-top ~ .ui-btn-icon-top {
                 margin-left: 10 * @px_base;
             }
+            &.ui-btn-text {
+                display: flex;
+                justify-content: center;
+                align-items: center;
+            }
         }
         &.ui-bottom-bar-icons {
             padding: 0 10 * @px_base;
